docs/errors/examples/nil-deref-method-call/nil-deref-method-call.grob
// E0101 — calling a method on a nullable string without ?. or ??
fn shoutName(name: string?): string {
    return name.toUpper()
}

print(shoutName("ada"))
